--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -27,25 +27,24 @@ jobs:
       - name: Dependencies
         run: pnpm i
 
-      - name: Run tests
-        run: pnpm run test
-
   deploy:
     runs-on: ubuntu-latest
     needs: build
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
       - name: Deploy to server
         run: |
-          echo "${{ secrets.PRIVATE_KEY }}" > private_key.pem
+          echo "${{ secrets.KEY }}" > private_key.pem
           chmod 600 private_key.pem
-          ssh -o StrictHostKeyChecking=no -i private_key.pem ${{ secrets.USER }}@${{ secrets.HOST }} <<EOF
-            cd fast-elon-bot
-            npx pm2 delete FastElon || true
-            git pull origin main
-            npm i -g pnpm
-            pnpm i
-            npx pm2 start index.js --name FastElon
+          ssh -o StrictHostKeyChecking=no -i private_key.pem ${{ secrets.USER }}@${{ secrets.HOST }} << 'EOF'
+          export PATH=/home/bitnami/.nvm/versions/node/v23.10.0/bin:$PATH
+          cd fast-elon-bot
+          npx pm2 delete FastElon
+          git pull origin main
+          npm i -g pnpm 
+          pnpm i
+          pnpm run build
+          npx pm2 start dist/main.js --name FastElon
+          EOF
