--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -36,7 +36,7 @@ jobs:
 
       - name: Deploy to server
         run: |
-          echo "${{ secrets.KEY }}" > private_key.pem
+          echo "${{ secrets.KEY }}" > private_key.pem << 'EOF'
           chmod 600 private_key.pem
           ssh -o StrictHostKeyChecking=no -i private_key.pem ${{ secrets.USER }}@${{ secrets.HOST }} << 'EOF'
           export PATH=/home/bitnami/.nvm/versions/node/v23.10.0/bin:$PATH
