--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -39,6 +39,7 @@ jobs:
           echo "${{ secrets.KEY }}" > private_key.pem
           chmod 600 private_key.pem
           ssh -o StrictHostKeyChecking=no -i private_key.pem ${{ secrets.USER }}@${{ secrets.HOST }} << 'EOF'
+          export PATH=/home/bitnami/.nvm/versions/node/v23.10.0/bin:$PATH
           cd fast-elon-bot
           npx pm2 delete FastElon
           git pull origin main
